# ppiconf

./: README.md  pyproject.toml
ppiconf/: __init__.py  main.py
ppiconf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
